<resources>
    <string name="app_name">Maexercise</string>
    <string name="action_settings">Settings</string>

    <string name="title">Calories Calculator</string>
    <string name="select_exercise">Select Exercise</string>
    <color name="white">#FFFFFF</color>

    <string name="number_input_tittle">How Strong?</string>
    <string name="rep_minute_title">Reps/Minutes</string>

    <string name="check_title">Check</string>
    <string name="you_burn">You Have Burn:</string>
    <string name="calories">Calories</string>
    <string name="equivalent">This is Equivalent To:</string>

    <string-array name="list_array">
        <item>Pushup</item>
        <item>Situp</item>
        <item>Squats</item>
        <item>Leg-lift</item>
        <item>Plank</item>
        <item>Jumping Jacks</item>
        <item>Pullup</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Jogging</item>
        <item>Swimming</item>
        <item>Stair-Climbing</item>
    </string-array>

</resources>
