<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kieykouch.maexercise.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#0c9cea">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/list_array"
        android:layout_below="@+id/textView2"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusableInTouchMode="false"
        android:layout_alignEnd="@+id/textView2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#4c0d01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_exercise"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/rep_minutes"
        android:hint="@string/rep_minute_title"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/spinner"
        android:gravity="right"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_input_tittle"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/rep_minutes" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_title"
        android:id="@+id/button"
        android:background="#ef5234"
        android:layout_below="@+id/rep_minutes"
        android:layout_toEndOf="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/you_burn"
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/burned"
        android:gravity="right"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/calories"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/burned"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/equivalent"
        android:id="@+id/textView5"
        android:layout_marginTop="103dp"
        android:layout_below="@+id/burned"
        android:layout_centerHorizontal="true"
        android:textColor="#4c0d01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_exercise"
        android:id="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:entries="@array/list_array"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusableInTouchMode="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_toStartOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/converted"
        android:gravity="right"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView6"
        android:textColor="#ffffff" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_above="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
